commenting out print statements for clarity